@@ -64,6 +64,7 @@ source "$APPSDIR/examples/posix_spawn/Kconfig"
 source "$APPSDIR/examples/qencoder/Kconfig"
 source "$APPSDIR/examples/random/Kconfig"
 source "$APPSDIR/examples/relays/Kconfig"
+source "$APPSDIR/examples/rgbled/Kconfig"
 source "$APPSDIR/examples/rgmp/Kconfig"
 source "$APPSDIR/examples/romfs/Kconfig"
 source "$APPSDIR/examples/sendmail/Kconfig"
