@@ -1695,6 +1695,12 @@ examples/relays
   NuttX is built as a protected, supervisor kernel (CONFIG_BUILD_PROTECTED
   or CONFIG_BUILD_KERNEL).
 
+examples/rgbled
+^^^^^^^^^^^^^^^
+
+  This example demonstrates the use of the RGB led driver to drive an RGB LED
+  with PWM outputs so that all color characteristcs of RGB LED can be controlled.
+
 examples/rgmp
 ^^^^^^^^^^^^^
 
