@@ -1,0 +1,30 @@
+#
+# For a description of the syntax of this configuration file,
+# see the file kconfig-language.txt in the NuttX tools repository.
+#
+
+config EXAMPLES_RGBLED
+	bool "RGB LED Test"
+	default n
+	---help---
+		Enable the RGB LED example
+
+if EXAMPLES_RGBLED
+
+config EXAMPLES_RGBLED_PROGNAME
+	string "Program name"
+	default "rgbled"
+	depends on BUILD_KERNEL
+	---help---
+		This is the name of the program that will be use when the NSH ELF
+		program is installed.
+
+config EXAMPLES_RGBLED_PRIORITY
+	int "RGBLED task priority"
+	default 100
+
+config EXAMPLES_RGBLED_STACKSIZE
+	int "RGBLED stack size"
+	default 2048
+
+endif # EXAMPLES_RGBLED
