@@ -1555,4 +1555,7 @@
 	* apps/examples/leds: An example to demonstrate use of LED
 	  driver (2016-02-20).
 	* apps/examples/smp:  An verifying SMP configurations (2016-02-21).
+	* apps/examples/rgbled:  Example using the RGB LED driver to
+	  drive an RGB LED via PWM.  From Alan Carvalho de Assis
+	  (2016-02-23).
 
